<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_animal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_label_animal_type" />

    <TextView
        android:id="@+id/info_animal_legs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_label_animal_legs" />

    <TextView
        android:id="@+id/info_animal_terror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_label_animal_terror" />

    <TextView
        android:id="@+id/info_animal_terror_lvl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_label_animal_terror_lvl"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_animal_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_label_animal_details" />

</LinearLayout>