<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/in_animal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/in_label_animal_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/in_animal_legs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/in_label_animal_legs"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/in_animal_terror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:freezesText="true"
        android:text="@string/in_label_animal_terror" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:onClick="submitAnimal"
        android:text="@string/btn_submit" />
</LinearLayout>